reduce calls to getSize