@@ -67,7 +67,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     <T extends ComparableMask<U, ?>, U extends Comparable<U>> BooleanMask(T other, U minValue, String name) {
         this(other.getSize(), other.getNextSeed(), other.getSymmetrySettings(), name, other.isParallel());
         enqueue(dependencies -> {
-            T source = (T) dependencies.get(0);
+            T source = (T) dependencies.getFirst();
             apply((x, y) -> setPrimitive(x, y, source.valueAtGreaterThanEqualTo(x, y, minValue)));
         }, other);
     }
@@ -80,7 +80,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                                                                                  String name) {
         this(other.getSize(), other.getNextSeed(), other.getSymmetrySettings(), name, other.isParallel());
         enqueue(dependencies -> {
-            T source = (T) dependencies.get(0);
+            T source = (T) dependencies.getFirst();
             apply((x, y) -> setPrimitive(x, y, source.valueAtGreaterThanEqualTo(x, y, minValue)
                                                && source.valueAtLessThanEqualTo(x, y, maxValue)));
         }, other);
@@ -132,7 +132,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         assertCompatibleMask(other);
         int[][] innerCount = getInnerCount();
         return enqueue(dependencies -> {
-            BooleanMask limiter = (BooleanMask) dependencies.get(0);
+            BooleanMask limiter = (BooleanMask) dependencies.getFirst();
             apply((x, y) -> {
                 if (limiter.get(x, y)) {
                     setPrimitive(x, y, transformAverage(calculateAreaAverageAsInts(radius, x, y, innerCount), .5f));
@@ -144,7 +144,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     @Override
     protected BooleanMask copyFrom(BooleanMask other) {
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             fill(source.mask, source.maskBooleanSize);
         }, other);
     }
@@ -285,7 +285,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask add(BooleanMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             for (int i = 0; i < mask.length; i++) {
                 mask[i] |= source.mask[i];
             }
@@ -302,7 +302,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         assertCompatibleMask(other);
         boolean val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     addPrimitiveAt(x, y, val);
@@ -328,7 +328,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     @Override
     public BooleanMask addWithOffset(BooleanMask other, int xOffset, int yOffset, boolean center, boolean wrapEdges) {
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             applyWithOffset(source, (BiIntBooleanConsumer) this::addPrimitiveAt, xOffset, yOffset, center, wrapEdges);
         }, other);
     }
@@ -349,7 +349,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask subtract(BooleanMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             for (int i = 0; i < mask.length; i++) {
                 mask[i] &= ~source.mask[i];
             }
@@ -361,7 +361,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         assertCompatibleMask(other);
         boolean val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     subtractPrimitiveAt(x, y, val);
@@ -388,7 +388,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask subtractWithOffset(BooleanMask other, int xOffset, int yOffset, boolean center,
                                           boolean wrapEdges) {
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             applyWithOffset(source, (BiIntBooleanConsumer) this::subtractPrimitiveAt, xOffset, yOffset, center,
                             wrapEdges);
         }, other);
@@ -398,7 +398,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask multiply(BooleanMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             for (int i = 0; i < mask.length; i++) {
                 mask[i] &= source.mask[i];
             }
@@ -415,7 +415,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         assertCompatibleMask(other);
         boolean val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     multiplyPrimitiveAt(x, y, val);
@@ -442,7 +442,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask multiplyWithOffset(BooleanMask other, int xOffset, int yOffset, boolean center,
                                           boolean wrapEdges) {
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             applyWithOffset(source, (BiIntBooleanConsumer) this::multiplyPrimitiveAt, xOffset, yOffset, center,
                             wrapEdges);
         }, other);
@@ -452,7 +452,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask divide(BooleanMask other) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             for (int i = 0; i < mask.length; i++) {
                 mask[i] ^= source.mask[i];
             }
@@ -469,7 +469,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         assertCompatibleMask(other);
         boolean val = value;
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             apply((x, y) -> {
                 if (source.getPrimitive(x, y)) {
                     dividePrimitiveAt(x, y, val);
@@ -496,7 +496,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public BooleanMask divideWithOffset(BooleanMask other, int xOffset, int yOffset, boolean center,
                                         boolean wrapEdges) {
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             applyWithOffset(source, (BiIntBooleanConsumer) this::dividePrimitiveAt, xOffset, yOffset, center,
                             wrapEdges);
         }, other);
@@ -611,6 +611,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
      */
     public BooleanMask randomWalk(int numWalkers, int numSteps) {
         return enqueue(() -> {
+            int size = getSize();
             for (int i = 0; i < numWalkers; i++) {
                 int maxXBound = getMaxXBound(SymmetryType.TERRAIN);
                 int minXBound = getMinXBound(SymmetryType.TERRAIN);
@@ -619,7 +620,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                 int minYBound = getMinYBound(x, SymmetryType.TERRAIN);
                 int y = random.nextInt(maxYBound - minYBound + 1) + minYBound;
                 for (int j = 0; j < numSteps; j++) {
-                    if (inBounds(x, y)) {
+                    if (inBounds(x, y, size)) {
                         applyAtSymmetryPoints(x, y, SymmetryType.TERRAIN, (sx, sy) -> setPrimitive(sx, sy, true));
                     }
                     switch (random.nextInt(4)) {
@@ -678,7 +679,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         List<Vector2> checkPoints = new ArrayList<>();
         checkPoints.add(new Vector2(start));
         for (int i = 0; i < numMiddlePoints; i++) {
-            Vector2 previousLoc = checkPoints.get(checkPoints.size() - 1);
+            Vector2 previousLoc = checkPoints.getLast();
             float angle = (float) ((random.nextFloat() - .5f) * 2 * StrictMath.PI / 2f) + previousLoc.angleTo(end);
             float magnitude = random.nextFloat() * start.getDistance(end) / numMiddlePoints;
             Vector2 nextLoc = previousLoc.copy().addPolar(angle, magnitude);
@@ -709,7 +710,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                  symmetryType);
             if (symmetrySettings.getSymmetry(symmetryType).getNumSymPoints() > 1) {
                 List<Vector2> symmetryPoints = getSymmetryPointsWithOutOfBounds(end, symmetryType);
-                path(start, symmetryPoints.get(0), maxStepSize, numMiddlePoints, midPointMaxDistance,
+                path(start, symmetryPoints.getFirst(), maxStepSize, numMiddlePoints, midPointMaxDistance,
                      midPointMinDistance, maxAngleError, symmetryType);
             }
         });
@@ -723,12 +724,15 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
             List<Vector2> checkPoints = new ArrayList<>();
             checkPoints.add(new Vector2(start));
             for (int i = 0; i < numMiddlePoints; i++) {
-                Vector2 previousLoc = checkPoints.get(checkPoints.size() - 1);
+                Vector2 previousLoc = checkPoints.getLast();
                 float angle = (float) ((random.nextFloat() - .5f) * 2 * StrictMath.PI / 2f) + previousLoc.angleTo(end);
                 if (symmetrySettings.terrainSymmetry() == Symmetry.POINT4
                     && angle % (StrictMath.PI / 2) < StrictMath.PI / 8) {
-                    angle += (random.nextBoolean() ? -1 : 1) * (random.nextFloat() * .5f + .5f) * 2f * StrictMath.PI
-                             / 4f;
+                    angle += (float) ((random.nextBoolean() ? -1 : 1) *
+                                      (random.nextFloat() * .5f + .5f) *
+                                      2f *
+                                      StrictMath.PI
+                                      / 4f);
                 }
                 float magnitude = random.nextFloat() * (midPointMaxDistance - midPointMinDistance)
                                   + midPointMinDistance;
@@ -833,6 +837,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
      * @return the modified mask
      */
     public BooleanMask progressiveWalk(int numWalkers, int numSteps) {
+        int size = getSize();
         for (int i = 0; i < numWalkers; i++) {
             int x = random.nextInt(getMaxXBound(SymmetryType.TERRAIN) - getMinXBound(SymmetryType.TERRAIN))
                     + getMinXBound(SymmetryType.TERRAIN);
@@ -842,7 +847,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
             int regressiveDir = random.nextInt(directions.size());
             directions.remove(regressiveDir);
             for (int j = 0; j < numSteps; j++) {
-                if (inBounds(x, y)) {
+                if (inBounds(x, y, size)) {
                     applyAtSymmetryPoints(x, y, SymmetryType.TERRAIN, (sx, sy) -> setPrimitive(sx, sy, true));
                 }
                 switch (directions.get(random.nextInt(directions.size()))) {
@@ -907,7 +912,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         for (int x2 = minX; x2 < maxX; ++x2) {
             for (int y2 = minY; y2 < maxY; ++y2) {
                 int bitIndex = bitIndex(x2, y2, size);
-                if (inBounds(x2, y2)
+                if (inBounds(x2, y2, size)
                     && getBit(bitIndex, maskCopy) != value
                     && (x - x2) * (x - x2) + (y - y2) * (y - y2) <= radius2) {
                     setBit(bitIndex, value, maskCopy);
@@ -937,7 +942,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         BooleanMask holes = new BooleanMask(this, getName() + "holes");
         holes.randomize(strength, SymmetryType.SPAWN).inflate(size);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             subtract(source);
         }, holes);
     }
@@ -952,7 +957,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         BooleanMask holes = new BooleanMask(this, getName() + "splat");
         holes.randomize(strength, SymmetryType.SPAWN).inflate(size);
         return enqueue(dependencies -> {
-            BooleanMask source = (BooleanMask) dependencies.get(0);
+            BooleanMask source = (BooleanMask) dependencies.getFirst();
             add(source);
         }, holes);
     }
@@ -1059,7 +1064,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                                                                                             T minValue, T maxValue) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.get(0);
+            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.getFirst();
             setWithSymmetry(SymmetryType.SPAWN, (x, y) -> {
                 T value = source.get(x, y);
                 return value.compareTo(minValue) >= 0 && value.compareTo(maxValue) < 0 && source.isLocalMax(x, y);
@@ -1071,7 +1076,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                                                                                             T minValue, T maxValue) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.get(0);
+            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.getFirst();
             setWithSymmetry(SymmetryType.SPAWN, (x, y) -> {
                 T value = source.get(x, y);
                 return value.compareTo(minValue) >= 0 && value.compareTo(maxValue) < 0 && source.isLocalMin(x, y);
@@ -1083,7 +1088,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
             ComparableMask<T, U> other, T minValue, T maxValue) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.get(0);
+            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.getFirst();
             setWithSymmetry(SymmetryType.SPAWN, (x, y) -> {
                 T value = source.get(x, y);
                 return value.compareTo(minValue) >= 0 && value.compareTo(maxValue) < 0 && source.isLocal1DMax(x, y);
@@ -1095,7 +1100,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
             ComparableMask<T, U> other, T minValue, T maxValue) {
         assertCompatibleMask(other);
         return enqueue(dependencies -> {
-            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.get(0);
+            ComparableMask<T, U> source = (ComparableMask<T, U>) dependencies.getFirst();
             setWithSymmetry(SymmetryType.SPAWN, (x, y) -> {
                 T value = source.get(x, y);
                 return value.compareTo(minValue) >= 0 && value.compareTo(maxValue) < 0 && source.isLocal1DMin(x, y);
@@ -1257,8 +1262,8 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         boolean value = getPrimitive(location);
         queue.add(location);
         queueHash.add(location);
-        while (queue.size() > 0) {
-            Vector2 next = queue.remove(0);
+        while (!queue.isEmpty()) {
+            Vector2 next = queue.removeFirst();
             queueHash.remove(next);
             if (getPrimitive(next) == value && !areaHash.contains(next)) {
                 areaHash.add(next);
@@ -1301,8 +1306,8 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
 
     private List<Vector2> spaceCoordinates(float radius, List<Vector2> coordinateList) {
         List<Vector2> chosenCoordinates = new ArrayList<>();
-        while (coordinateList.size() > 0) {
-            Vector2 location = coordinateList.remove(0);
+        while (!coordinateList.isEmpty()) {
+            Vector2 location = coordinateList.removeFirst();
             chosenCoordinates.add(location);
             coordinateList.removeIf((loc) -> location.getDistance(loc) < radius);
         }
@@ -1356,15 +1361,15 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
         }
         List<Vector2> chosenCoordinates = new ArrayList<>();
         enqueue(() -> {
-            while (coordinateList.size() > 0) {
+            while (!coordinateList.isEmpty()) {
                 Vector2 location = coordinateList.remove(random.nextInt(coordinateList.size()));
                 float spacing = random.nextFloat() * (maxSpacing - minSpacing) + minSpacing;
                 chosenCoordinates.add(location);
-                coordinateList.removeIf((loc) -> location.getDistance(loc) < spacing);
+                coordinateList.removeIf(loc -> location.getDistance(loc) < spacing);
                 if (symmetryType != null) {
                     List<Vector2> symmetryPoints = getSymmetryPoints(location, symmetryType);
                     symmetryPoints.forEach(
-                            symPoint -> coordinateList.removeIf((loc) -> symPoint.getDistance(loc) < spacing));
+                            symPoint -> coordinateList.removeIf(loc -> symPoint.getDistance(loc) < spacing));
                 }
             }
         });
@@ -1397,7 +1402,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
     public Vector2 getRandomPosition() {
         assertNotPipelined();
         List<Vector2> coordinates = new ArrayList<>(getAllCoordinatesEqualTo(true, 1));
-        if (coordinates.size() == 0) {
+        if (coordinates.isEmpty()) {
             return null;
         }
         int cell = random.nextInt(coordinates.size());
@@ -1450,7 +1455,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                     other.apply((x, y) -> {
                         int shiftX = coordinateXMap.get(x);
                         int shiftY = coordinateYMap.get(y);
-                        if (inBounds(shiftX, shiftY)) {
+                        if (inBounds(shiftX, shiftY, size)) {
                             boolean value = other.getPrimitive(x, y);
                             applyAtSymmetryPoints(shiftX, shiftY, SymmetryType.SPAWN,
                                                   (sx, sy) -> action.accept(sx, sy, value));
@@ -1465,7 +1470,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                         other.apply((x, y) -> {
                             int shiftX = coordinateXMap.get(x);
                             int shiftY = coordinateYMap.get(y);
-                            if (inBounds(shiftX, shiftY)) {
+                            if (inBounds(shiftX, shiftY, size)) {
                                 action.accept(shiftX, shiftY, other.getPrimitive(x, y));
                             }
                         });
@@ -1479,7 +1484,7 @@ public final class BooleanMask extends PrimitiveMask<Boolean, BooleanMask> {
                 apply((x, y) -> {
                     int shiftX = coordinateXMap.get(x);
                     int shiftY = coordinateYMap.get(y);
-                    if (other.inBounds(shiftX, shiftY)) {
+                    if (inBounds(shiftX, shiftY, otherSize)) {
                         action.accept(x, y, other.getPrimitive(shiftX, shiftY));
                     }
                 });
